manifests/bookorbit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookorbit
  namespace: bookorbit
spec:
  selector:
    app: bookorbit
  ports:
    - name: http
      port: 80
      targetPort: 3000
